force-app/main/default/objects/COMM_Capacity__c/COMM_Capacity__c.object-meta.xml
<CustomObject>
    <description>The available capacity for a given Product</description>
    <label>Capacity</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Capacity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Capacities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>