force-app/main/default/objects/COMM_Capacity__c/fields/COMM_Active__c.field-meta.xml
<CustomField>
    <fullName>COMM_Active__c</fullName>
    <description>Determine if Record is Active</description>
    <formula>COMM_ValidTo__c &gt; NOW()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>