force-app/main/default/objects/COMM_Capacity__c/fields/COMM_CalculatedCapacity__c.field-meta.xml
<CustomField>
    <fullName>COMM_CalculatedCapacity__c</fullName>
    <description>Field to calculate the used Capacity. For non-subscription Products, the Capacity will be value on the manual capacity field. If a Subscription Product, the capacity will be the result of applying the multiplier to the Parking Spaces.</description>
    <formula>IF(RecordType.DeveloperName = &apos;COMM_Subscription&apos;, FLOOR(COMM_ParkingSpaces__c * COMM_Multiplier__c), COMM_Capacity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>