force-app/main/default/objects/COMM_Capacity__c/fields/COMM_Capacity__c.field-meta.xml
<CustomField>
    <fullName>COMM_Capacity__c</fullName>
    <description>It is the daily capacity set by hour, that is constant throughout the operating hours.

This capacity configuration is not applicable to subscriptions.

For the subscriptions, the capacity is calculated by multiplying the total number of parking spaces by the multiplier. This capacity is constant, therefore is not defined by hour.</description>
    <inlineHelpText>To put the product as suspended, changed capacity to 0.</inlineHelpText>
    <label>Capacity</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>