force-app/main/default/objects/COMM_Capacity__c/fields/COMM_IsDefaultCapacity__c.field-meta.xml
<CustomField>
    <fullName>COMM_IsDefaultCapacity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if Record is to be used as the Default Capacity for the associated Product</description>
    <label>Is Default Capacity</label>
    <type>Checkbox</type>
</CustomField>