force-app/main/default/objects/COMM_Capacity__c/fields/COMM_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>COMM_Multiplier__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Multiplier to be only applicable to Subscriptions</description>
    <label>Multiplier</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>