force-app/main/default/objects/COMM_Capacity__c/fields/COMM_ParkingSpaces__c.field-meta.xml
<CustomField>
    <fullName>COMM_ParkingSpaces__c</fullName>
    <description>The total number of parking spaces. Only applicable to Subscriptions</description>
    <label>Parking Spaces</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>