force-app/main/default/objects/COMM_Capacity__c/fields/COMM_ProcessId__c.field-meta.xml
<CustomField>
    <fullName>COMM_ProcessId__c</fullName>
    <description>OCI Inventory Upload processing message</description>
    <label>Process Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>