force-app/main/default/objects/COMM_Capacity__c/fields/COMM_ProcessStatus__c.field-meta.xml
<CustomField>
    <fullName>COMM_ProcessStatus__c</fullName>
    <label>Process Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NOT PROCESSED</fullName>
                <default>true</default>
                <label>Not Processed</label>
            </value>
            <value>
                <fullName>PENDING</fullName>
                <label>Pending</label>
            </value>
            <value>
                <fullName>COMPLETED</fullName>
                <label>Completed</label>
            </value>
            <value>
                <fullName>FAILED</fullName>
                <label>Failed</label>
            </value>
            <value>
                <fullName>RUNNING</fullName>
                <label>Running</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>