force-app/main/default/objects/COMM_Capacity__c/fields/COMM_Product__c.field-meta.xml
<CustomField>
    <fullName>COMM_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product that the capacity for specific period of times will be applied</description>
    <label>Product</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
        <errorMessage>For Subscription, product must also be subscription.
For Capacity, product must also be a non-subscription</errorMessage>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Subscription</value>
        </filterItems>
        <filterItems>
            <field>Product2.Family</field>
            <operation>equals</operation>
            <value>Subscription</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Capacity</value>
        </filterItems>
        <filterItems>
            <field>Product2.Family</field>
            <operation>notEqual</operation>
            <value>Subscription</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Capacities</relationshipLabel>
    <relationshipName>Capacities</relationshipName>
    <type>Lookup</type>
</CustomField>