force-app/main/default/objects/COMM_Capacity__c/fields/COMM_StatusMessage__c.field-meta.xml
<CustomField>
    <fullName>COMM_StatusMessage__c</fullName>
    <label>Status Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>