force-app/main/default/objects/COMM_Capacity__c/fields/COMM_ValidTo__c.field-meta.xml
<CustomField>
    <fullName>COMM_ValidTo__c</fullName>
    <description>End date and hour for which the capacity is valid</description>
    <label>Valid To</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>