force-app/main/default/objects/COMM_Capacity__c/recordTypes/COMM_Capacity.recordType-meta.xml
<RecordType>
    <fullName>COMM_Capacity</fullName>
    <active>true</active>
    <description>Record Type for Capacity used in Non-Subscription Products</description>
    <label>Capacity</label>
</RecordType>