force-app/main/default/objects/COMM_Capacity__c/recordTypes/COMM_Subscription.recordType-meta.xml
<RecordType>
    <fullName>COMM_Subscription</fullName>
    <active>true</active>
    <description>Record Type for Capacity used in Subscription Products</description>
    <label>Subscription</label>
</RecordType>