force-app/main/default/objects/COMM_Capacity__c/validationRules/COMM_VerifyCapacityValues.validationRule-meta.xml
<ValidationRule>
    <fullName>COMM_VerifyCapacityValues</fullName>
    <active>true</active>
    <description>Capacity can only have positives values or 0</description>
    <errorConditionFormula>COMM_Capacity__c &lt; 0</errorConditionFormula>
    <errorDisplayField>COMM_Capacity__c</errorDisplayField>
    <errorMessage>Negative values are not allowed</errorMessage>
</ValidationRule>