force-app/main/default/objects/COMM_Capacity__c/validationRules/COMM_VerifyExpiredDate.validationRule-meta.xml
<ValidationRule>
    <fullName>COMM_VerifyExpiredDate</fullName>
    <active>true</active>
    <description>Check if Capacity date is expired</description>
    <errorConditionFormula>AND(
NOT(ISNEW()),
PRIORVALUE(COMM_ValidTo__c) &lt; NOW())</errorConditionFormula>
    <errorMessage>Expired Capacities cannot be changed</errorMessage>
</ValidationRule>