force-app/main/default/objects/COMM_Capacity__c/validationRules/COMM_VerifyMultiplier.validationRule-meta.xml
<ValidationRule>
    <fullName>COMM_VerifyMultiplier</fullName>
    <active>true</active>
    <description>Check if Multiplier is not great then 1 or the decimal number is not .0 or .5</description>
    <errorConditionFormula>OR(
COMM_Multiplier__c &lt; 1,
REGEX(TEXT(COMM_Multiplier__c), &apos;[0-9]+[.]{1}(?:[1-4]|[6-9]|[05][0-9]+)[0-9]*&apos;))</errorConditionFormula>
    <errorDisplayField>COMM_Multiplier__c</errorDisplayField>
    <errorMessage>Multiplier should greater or equal than 1 and can only have the decimal number .0 or .5</errorMessage>
</ValidationRule>