force-app/main/default/objects/COMM_Capacity__c/validationRules/COMM_VerifyParkingSpaces.validationRule-meta.xml
<ValidationRule>
    <fullName>COMM_VerifyParkingSpaces</fullName>
    <active>true</active>
    <description>Parking Spaces can only have positives values or 0</description>
    <errorConditionFormula>COMM_ParkingSpaces__c &lt; 0</errorConditionFormula>
    <errorDisplayField>COMM_ParkingSpaces__c</errorDisplayField>
    <errorMessage>Negative values are not allowed</errorMessage>
</ValidationRule>