force-app/main/default/objects/COMM_Capacity__c/validationRules/COMM_VerifyProductFamilly.validationRule-meta.xml
<ValidationRule>
    <fullName>COMM_VerifyProductFamilly</fullName>
    <active>true</active>
    <description>Check if Capacity Product is Lounge or Subscriptions and is a child</description>
    <errorConditionFormula>OR(
AND(
ISPICKVAL(COMM_Product__r.Family, &apos;Lounge&apos;),
NOT(ISPICKVAL(COMM_Product__r.COMM_SubCategory__c, &apos;Lounge&apos;))),

AND(
ISPICKVAL(COMM_Product__r.Family, &apos;Subscription&apos;),
NOT(ISPICKVAL(COMM_Product__r.COMM_SubCategory__c, &apos;Park&apos;))))</errorConditionFormula>
    <errorDisplayField>COMM_Product__c</errorDisplayField>
    <errorMessage>Capacity can only be created for parent products</errorMessage>
</ValidationRule>