force-app/main/default/objects/COMM_Capacity__c/validationRules/COMM_VerifyRangeDates.validationRule-meta.xml
<ValidationRule>
    <fullName>COMM_VerifyRangeDates</fullName>
    <active>true</active>
    <description>Check if Valid to is set before Valid From</description>
    <errorConditionFormula>COMM_ValidTo__c &lt; COMM_ValidFrom__c</errorConditionFormula>
    <errorDisplayField>COMM_ValidTo__c</errorDisplayField>
    <errorMessage>Valid To cannot be set before Valid From</errorMessage>
</ValidationRule>