force-app/main/default/objects/COMM_Capacity__c/listViews/All_Capacities.listView-meta.xml
<ListView>
    <fullName>All_Capacities</fullName>
    <columns>NAME</columns>
    <columns>COMM_IsDefaultCapacity__c</columns>
    <columns>COMM_Product__c</columns>
    <columns>COMM_ValidFrom__c</columns>
    <columns>COMM_ValidTo__c</columns>
    <columns>COMM_Capacity__c</columns>
    <columns>COMM_CalculatedCapacity__c</columns>
    <columns>COMM_ProcessStatus__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Capacities</label>
</ListView>